# bike_maps_master_thesis

./: .dockerignore  .gitignore  README.md  docker-compose.yml  nginx.conf
docker/postgis/: init.sql
src/python/: pyproject.toml
src/python/src/bike_project/: cityy_center.sql  create_schematic_map.py  generate_results_berlin.py  generate_results_graz.py  generate_results_hamburg.py  main.py  osm_data.py
src/python/src/bike_project/calibration/: process_bicimad.ipynb
src/python/src/bike_project/modules/: category_processing.py  final_table_creation.py  network_preparation.py  network_processing.py  network_reduction.py  poidpy_trip_generation.py  trip_distribution.py
src/python/src/bike_project/results/: berlin_results.ipynb  distributions.ipynb  graz_results.ipynb  hamburg_results.ipynb  hamburg_script.sql
src/python/src/bike_project/results/figures/: berlin_kendalltau.tex  berlin_pearson.tex  berlin_spearman.tex  db_kendalltau_corr.tex  db_pearson_corr.tex  db_spearman_corr.tex  db_topk_overlap.tex  graz_kendalltau.tex  graz_pearson.tex  graz_spearman.tex  hamburg_kendalltau.tex  hamburg_pearson.tex  hamburg_spearman.tex  sr_kendalltau_corr.tex  sr_pearson_corr.tex  sr_spearman_corr.tex  sr_topk_overlap.tex
src/python/src/bike_project/validation/: counting_stations_data_extract.ipynb  graz_station_dataset_creation.ipynb  hamburg_evaluation.py  prepare_validation.py
src/python/src/bike_project/validation/Berlin/: berlin_stations_line_ref.qmd  berlin_validation.ipynb
src/python/src/bike_project/validation/Hamburg/: validation_hamburg_counts.ipynb
(+12 files in other folders)
