[project]
name = "bike-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1 || >3.14.1,<4"
dependencies = [
    "osm2geojson (>=0.3.1,<0.4.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "cligj (>=0.7.2,<0.8.0)",
    "fiona (>=1.10.1,<2.0.0)",
    "qlever (>=0.5.45,<0.6.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "geoalchemy2 (>=0.18.1,<0.19.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "poidpy @ file:///home/jmartinez/Documents/bike_project/src/python/src/external/poidpy",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "tikzplotlib-patched (>=0.10.1.post13,<0.11.0)",
]

[tool.poetry]
packages = [{include = "bike_project", from = "src"}]

[tool.poetry.dependencies]
poidpy = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
